--- a/app/admin/components/store-order-dispatching/store-order-dispatching-record.component.html
+++ b/app/admin/components/store-order-dispatching/store-order-dispatching-record.component.html
@@ -6,12 +6,10 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
         </div>
-        <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-          <option value="is_approved_prepa_date">Preparation Date</option>
-          <option value="category">Category</option>
-          <option value="store_name">Storer</option>
-          <option value="route">Route</option>
-          <option value="area">Area</option>
+        <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchByDispatching">
+          <option value="is_approved_prepa_date">PREPARATION DATE</option>
+          <option value="store_code">STORE CODE</option>
+          <option value="category">CATEGORY</option>
         </select>
       </div>
     </div>
@@ -21,8 +19,8 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
         </div>
-        <input type="text" class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
-          [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
+        <input type="search" class="form-control" placeholder="Find here...." autocomplete="off" id="txtSearchText"
+          name="SearchText" [(ngModel)]="searchTextDispatching" (keyup)="onSearchTextKeyup($event)" />
       </div>
     </div>
   </div>
@@ -48,7 +46,7 @@
           </thead>
           <tbody>
             <tr
-              *ngFor="let item of dispatchingList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
+              *ngFor="let item of dispatchingList | filter: searchByDispatching : searchTextDispatching | paging : currentPageIndexDispatching : pageSize; let i = index">
               <td>{{item.wh_checker_move_order_no | number:'1.0':'en-US'}}</td>
               <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy"}}</td>
               <td>{{item.category}}</td>
@@ -74,50 +72,50 @@
   <!-- pagination -->
   <div class="col-md-12">
     <ul class="pagination paginationStyle justify-content-center mt-1">
-      <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+      <li class="page-item" (click)="onPageIndexClicked(currentPageIndexDispatching - 1)">
         <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
       </li>
 
-      <ng-container *ngIf="pages.length <= 10">
-        <li class="page-item" *ngFor="let page of pages"
-          [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
+      <ng-container *ngIf="pagesDispatching.length <= 10">
+        <li class="page-item" *ngFor="let page of pagesDispatching"
+          [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexDispatching}"
           (click)="onPageIndexClicked(page.pageIndex)">
           <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
         </li>
       </ng-container>
 
-      <ng-container *ngIf="pages.length > 10">
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
+      <ng-container *ngIf="pagesDispatching.length > 10">
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == 0}"
           (click)="onPageIndexClicked(0)">
           <a class="page-link" href="#" onclick="return false">1</a>
         </li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == 1}"
           (click)="onPageIndexClicked(1)">
           <a class="page-link" href="#" onclick="return false">2</a>
         </li>
 
-        <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+        <li *ngIf="currentPageIndexDispatching > 1 && currentPageIndexDispatching < pagesDispatching.length - 2">&nbsp;...&nbsp;</li>
 
-        <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-          *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-          <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+        <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndexDispatching)"
+          *ngIf="currentPageIndexDispatching > 1 && currentPageIndexDispatching < pagesDispatching.length - 2">
+          <a class="page-link" href="#" onclick="return false">{{currentPageIndexDispatching + 1}}</a>
         </li>
 
         <li>&nbsp;...&nbsp;</li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-          (click)="onPageIndexClicked(pages.length - 2)">
-          <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == pagesDispatching.length - 2}"
+          (click)="onPageIndexClicked(pagesDispatching.length - 2)">
+          <a class="page-link" href="#" onclick="return false">{{pagesDispatching.length - 1}}</a>
         </li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-          (click)="onPageIndexClicked(pages.length - 1)">
-          <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == pagesDispatching.length - 1}"
+          (click)="onPageIndexClicked(pagesDispatching.length - 1)">
+          <a class="page-link" href="#" onclick="return false">{{pagesDispatching.length}}</a>
         </li>
       </ng-container>
 
-      <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+      <li class="page-item" (click)="onPageIndexClicked(currentPageIndexDispatching + 1)">
         <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
       </li>
     </ul>
@@ -197,7 +195,7 @@
                 <tbody>
                   <tr *ngFor="let item of dispatchingItems">
                     <td>{{item.primary_id}}</td>
-                    <td>{{item.item_code</td>
+                    <td>{{item.item_code}}</td>
                     <td>{{item.description}}</td>
                     <td>{{item.uom}}</td>
                     <td>{{item.qty | number}}</td>
