--- a/app/admin/components/store-order/store-order.component.html
+++ b/app/admin/components/store-order/store-order.component.html
@@ -37,10 +37,8 @@
                 </div>
                 <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
                  >
+                 <option value="store_code">STORE CODE</option>
                  <option value="category">CATEGORY</option>
-                 <option value="store_name">STORE</option>
-                 <option value="route">ROUTE</option>
-                 <option value="area">AREA</option>
                 </select>
               </div>
             </div>
