--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -636,7 +636,7 @@
     <div class="modal-content">
       <div class="modal-header bg-all text-white">
         <div class="modal-title">View Material Request</div>
-        <button type="button" class="close" data-dismiss="modal">
+        <button type="button" class="close" id="viewModalClose" data-dismiss="modal">
           <span>&times;</span>
         </button>
       </div>
