--- a/app/components/login/login.component.html
+++ b/app/components/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="form-group col-md-12">
         <mat-form-field floatLabel="auto" appearance="outline" color="primary" class="full-width">
           <input type="text" matInput placeholder="Username" [(ngModel)]="loginViewModel.UserName" name="UserName"
-            formControlName="username" [errorStateMatcher]="customErrorStateMatcher" />
+            formControlName="username" [errorStateMatcher]="customErrorStateMatcher" autofocus/>
           <mat-label>Username</mat-label>
           <mat-hint align="end">Enter your Username</mat-hint>
           <mat-icon matPrefix>person</mat-icon>
