--- a/app/admin/components/store-order-prepared/prepared-store-order.component.html
+++ b/app/admin/components/store-order-prepared/prepared-store-order.component.html
@@ -18,13 +18,8 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
         </div>
-        <input type="search" 
-        class="form-control" 
-        placeholder="Find here...." 
-        id="txtSearchText" 
-        name="SearchText"
-        autocomplete="off"
-          [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
+        <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
+          autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
       </div>
     </div>
   </div>
@@ -33,8 +28,7 @@
   <div class="col-lg-12">
     <div class="d-flex">
       <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
-        <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-        <table class="" style="width:100%">
+        <table class="table table-striped table-bordered nowrap table-responsive-sm">
           <thead>
             <tr class="text-light header-bg-color-um system-name">
 
@@ -63,18 +57,18 @@
               </td>
               <td class="text-center">
                 <button (click)="onApproveClick(item)" data-toggle="modal" data-target="#preparedOrderApprovalModal"
-                data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="success"
-                mat-stroked-button>
-                <span class="fa fa-eye"></span> View
-              </button>
+                  data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="success"
+                  mat-stroked-button>
+                  <span class="fa fa-eye"></span> View
+                </button>
 
-
+<!-- 
 
                 <button (click)="onApproveClick(item)" data-toggle="modal" data-target="#preparedOrderApprovalModal"
                   data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="primary"
                   mat-stroked-button>
                   <span class="fa fa-check-circle"></span> Approve
-                </button>
+                </button> -->
 
                 <button (click)="onCancelOrderClick(item)" data-toggle="modal" data-target="#cancelOrderModal"
                   data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="warn"
@@ -240,7 +234,7 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%"
                 id="GridView2">
                 <thead>
-                  <tr>
+                  <tr class="text-light header-bg-color-um system-name">
                     <!-- <th>Parent</th> -->
                     <th>ID</th>
                     <th>Item Code</th>
@@ -280,12 +274,12 @@
         </div>
 
         <div class="modal-footer">
-          <button mat-stroked-button color="primary" id="ApproveButton" [hidden]="hideApproveButton" class="mr-2"
+          <button mat-stroked-button color="primary" id="ApproveButton" [hidden]="hideApproveButton == 1" class="mr-2"
             (click)="approvedOrder()" [disabled]="!approvalForm.valid">Approve</button>
           <button [hidden]="true" mat-stroked-button color="warn" data-dismiss="modal"
             id="closeApprovalModal">Cancel</button>
-
-          <ng-container *ngIf="hideApproveButton">
+          <!-- {{approvalForm.value | json}} -->
+          <ng-container *ngIf="hideApproveButton == 1">
             <p style="color: red; margin:auto">
               You can't approve this order, due to cancelled Item/s!
             </p>
